# weave-mods

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.openhands  Dockerfile.spa.template  Dockerfile.template  Justfile  LICENSE  Makefile  README.md  build.py  deno.json  deno_server.ts  depot.json  dev.py  entrypoint.sh  featured-mods.json  featured.toml  generate_manifest.sh  index.ts  manifest.json  mod.py
.github/workflows/: build_dev.yaml  build_mods.yaml
docs/plans/: 2025-11-07-marimo-edit-publish-modes-design.md  2025-11-07-marimo-edit-publish-modes-implementation.md
mods/: CLAUDE.md  artifact-helper.py  deno_server.ts  dev-entrypoint.py  healthcheck.py  marimo-entrypoint.py
mods/anamolyzer/: README.md  app.py  pyproject.toml
mods/annotator/: README.md  app.py  pyproject.toml
mods/dashboard/: README.md  pyproject.toml
mods/demo/: README.md  app.py  pyproject.toml
mods/embedding-classifier/: README.md  app.py  pyproject.toml
mods/eval_categorization/: app.py  pyproject.toml
mods/eval_categorization/src/: eval_classification.py  utils.py
mods/eval_dataset_gen/: README.md  app.py  overrides.txt  pyproject.toml  weave_utils.py
mods/eval_dataset_gen/configs/: config.yaml
mods/guardrails-playground/: README.md  app.py  pyproject.toml
mods/guardrails_playground/: README.md  app.py  pyproject.toml
mods/js-demo/: README.md  api-key.sh  index.html  index.ts  local-echo.js  package.json  pnpm-lock.yaml
mods/js-demo/vibez/: AGENTS.md
mods/js-demo/vibez/.claude/: settings.json
mods/js-demo/vibez/weaveuilib/: README.md  apiUtils.ts  cache.ts  example.tsx  hooks.ts  parseRef.ts  weaveData.ts  weaveUtils.ts
mods/labeling/html/: README.md  app.py  pyproject.toml  theme.py
mods/labeling/pairwise/: Dockerfile  README.md  app.py  components.py  llm_ops.py  pyproject.toml  utils.py
mods/marimo/: README.md  app.py  pyproject.toml  test_app.py  utils.py
mods/openhands/: .gitignore  Dockerfile  README.md  build.sh  dnsmasq.conf  mod-entrypoint.sh  repo.md
mods/openhands/patches/: action_execution_server.py
mods/openui/: README.md  app.py  pyproject.toml
mods/playground/: README.md  pyproject.toml
mods/together-ft/: Overview.py  README.md  app.py  pyproject.toml  utils.py
mods/together-ft/pages/: Generate_Training_Data.py  finetune.py  generate_training_data.py
mods/tracecraft/: README.md  app.py  pyproject.toml
mods/wandb/: artifact-helper.py  healthcheck.py  marimo-entrypoint.py
mods/welcome/: README.md  app.py  pyproject.toml
sdk/: README.md  pyproject.toml
sdk/src/mods/: __init__.py
sdk/src/mods/api/: __init__.py  query.py  weave_api_next.py
sdk/src/mods/streamlit/: __init__.py  api.py  chat.py  dataframe.py  multiselect.py  selectbox.py
