[project]
name = "demo"
version = "0.1.0"
description = "A demo of using helpers from the weave mods sdk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["streamlit>=1.40.0"]

[tool.weave.mod]
flavor = "streamlit"

[tool.uv.sources]
mods = { path = "../../sdk", editable = true }

[dependency-groups]
dev = [
    "mods",
]
