[project]
name = "eval-categorization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.4.2",
    "openai>=1.59.7",
    "python-dotenv>=1.0.1",
    "streamlit>=1.41.1",
    "weave>=0.51.28",
]

[dependency-groups]
dev = ["mods"]

[tool.uv.sources]
mods = { path = "../../sdk", editable = true }

[tool.weave.mod]
flavor = "streamlit"
secrets = ["OPENAI_API_KEY", "WANDB_API_KEY"]
# Optional, inferred from flavor
port = 6637
entrypoint = "app.py"

[tool.weave.mod.env]
DEFAULT_OPENAI_MODEL = "gpt-4o-mini"
