[project]
name = "marimo-example"
version = "0.1.0"
description = "Example marimo mod demonstrating edit and publish modes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.1",
    "marimo[recommended]>=0.17.7",
    "polars[pyarrow]>=1.35.1",
    "sqlglot>=27.29.0",
]

[tool.weave.mod]
flavor = "marimo"

[tool.uv.sources]
mods = { path = "../../sdk", editable = true }

[dependency-groups]
dev = [
    "mods",
]
