[project]
name = "welcome"
version = "0.1.0"
description = "A simple welcome mod showing examples of what can be done"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "pandas>=2.2.3",
 "plotly>=5.24.1",
 "streamlit>=1.39.0",
 "weave>=0.51.17",
]

[tool.weave.mod]
flavor = "streamlit"
secrets = ["WANDB_API_KEY"]
